// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> snapshot should match snapshot 1`] = `
<Popover
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <LazyTippy
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
          Object {
            "name": "preventOverflow",
            "options": Object {
              "altAxis": true,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <ForwardRef(TippyWrapper)
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      plugins={
        Array [
          Object {
            "fn": [Function],
          },
        ]
      }
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
            Object {
              "name": "preventOverflow",
              "options": Object {
                "altAxis": true,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <Tippy
        animation={false}
        appendTo="parent"
        offset={
          Array [
            0,
            16,
          ]
        }
        placement="bottom"
        plugins={
          Array [
            Object {
              "fn": [Function],
            },
          ]
        }
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "name": "arrow",
                "options": Object {
                  "element": "#arrow",
                  "padding": 5,
                },
              },
              Object {
                "name": "preventOverflow",
                "options": Object {
                  "altAxis": true,
                },
              },
            ],
          }
        }
        render={[Function]}
        trigger="click"
      >
        <button>
          Click Me!
        </button>
        <Portal
          containerInfo={
            <div
              data-tippy-root=""
              id="tippy-1"
              style="pointer-events: none; z-index: 9999;"
            >
              
            </div>
          }
        />
      </Tippy>
    </ForwardRef(TippyWrapper)>
  </LazyTippy>
</Popover>
`;

exports[`<Popover /> snapshot should match snapshot with className 1`] = `
<Popover
  className="example-class"
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <LazyTippy
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
          Object {
            "name": "preventOverflow",
            "options": Object {
              "altAxis": true,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <ForwardRef(TippyWrapper)
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      plugins={
        Array [
          Object {
            "fn": [Function],
          },
        ]
      }
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
            Object {
              "name": "preventOverflow",
              "options": Object {
                "altAxis": true,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <Tippy
        animation={false}
        appendTo="parent"
        offset={
          Array [
            0,
            16,
          ]
        }
        placement="bottom"
        plugins={
          Array [
            Object {
              "fn": [Function],
            },
          ]
        }
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "name": "arrow",
                "options": Object {
                  "element": "#arrow",
                  "padding": 5,
                },
              },
              Object {
                "name": "preventOverflow",
                "options": Object {
                  "altAxis": true,
                },
              },
            ],
          }
        }
        render={[Function]}
        trigger="click"
      >
        <button>
          Click Me!
        </button>
        <Portal
          containerInfo={
            <div
              data-tippy-root=""
              id="tippy-2"
              style="pointer-events: none; z-index: 9999;"
            >
              
            </div>
          }
        />
      </Tippy>
    </ForwardRef(TippyWrapper)>
  </LazyTippy>
</Popover>
`;

exports[`<Popover /> snapshot should match snapshot with color 1`] = `
<Popover
  color="tertiary"
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <LazyTippy
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
          Object {
            "name": "preventOverflow",
            "options": Object {
              "altAxis": true,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <ForwardRef(TippyWrapper)
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      plugins={
        Array [
          Object {
            "fn": [Function],
          },
        ]
      }
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
            Object {
              "name": "preventOverflow",
              "options": Object {
                "altAxis": true,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <Tippy
        animation={false}
        appendTo="parent"
        offset={
          Array [
            0,
            16,
          ]
        }
        placement="bottom"
        plugins={
          Array [
            Object {
              "fn": [Function],
            },
          ]
        }
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "name": "arrow",
                "options": Object {
                  "element": "#arrow",
                  "padding": 5,
                },
              },
              Object {
                "name": "preventOverflow",
                "options": Object {
                  "altAxis": true,
                },
              },
            ],
          }
        }
        render={[Function]}
        trigger="click"
      >
        <button>
          Click Me!
        </button>
        <Portal
          containerInfo={
            <div
              data-tippy-root=""
              id="tippy-5"
              style="pointer-events: none; z-index: 9999;"
            >
              
            </div>
          }
        />
      </Tippy>
    </ForwardRef(TippyWrapper)>
  </LazyTippy>
</Popover>
`;

exports[`<Popover /> snapshot should match snapshot with id 1`] = `
<Popover
  id="example-id"
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <LazyTippy
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
          Object {
            "name": "preventOverflow",
            "options": Object {
              "altAxis": true,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <ForwardRef(TippyWrapper)
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      plugins={
        Array [
          Object {
            "fn": [Function],
          },
        ]
      }
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
            Object {
              "name": "preventOverflow",
              "options": Object {
                "altAxis": true,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <Tippy
        animation={false}
        appendTo="parent"
        offset={
          Array [
            0,
            16,
          ]
        }
        placement="bottom"
        plugins={
          Array [
            Object {
              "fn": [Function],
            },
          ]
        }
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "name": "arrow",
                "options": Object {
                  "element": "#arrow",
                  "padding": 5,
                },
              },
              Object {
                "name": "preventOverflow",
                "options": Object {
                  "altAxis": true,
                },
              },
            ],
          }
        }
        render={[Function]}
        trigger="click"
      >
        <button>
          Click Me!
        </button>
        <Portal
          containerInfo={
            <div
              data-tippy-root=""
              id="tippy-3"
              style="pointer-events: none; z-index: 9999;"
            >
              
            </div>
          }
        />
      </Tippy>
    </ForwardRef(TippyWrapper)>
  </LazyTippy>
</Popover>
`;

exports[`<Popover /> snapshot should match snapshot with style 1`] = `
<Popover
  style={
    Object {
      "color": "pink",
    }
  }
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <LazyTippy
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
          Object {
            "name": "preventOverflow",
            "options": Object {
              "altAxis": true,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <ForwardRef(TippyWrapper)
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      plugins={
        Array [
          Object {
            "fn": [Function],
          },
        ]
      }
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
            Object {
              "name": "preventOverflow",
              "options": Object {
                "altAxis": true,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <Tippy
        animation={false}
        appendTo="parent"
        offset={
          Array [
            0,
            16,
          ]
        }
        placement="bottom"
        plugins={
          Array [
            Object {
              "fn": [Function],
            },
          ]
        }
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "name": "arrow",
                "options": Object {
                  "element": "#arrow",
                  "padding": 5,
                },
              },
              Object {
                "name": "preventOverflow",
                "options": Object {
                  "altAxis": true,
                },
              },
            ],
          }
        }
        render={[Function]}
        trigger="click"
      >
        <button>
          Click Me!
        </button>
        <Portal
          containerInfo={
            <div
              data-tippy-root=""
              id="tippy-4"
              style="pointer-events: none; z-index: 9999;"
            >
              
            </div>
          }
        />
      </Tippy>
    </ForwardRef(TippyWrapper)>
  </LazyTippy>
</Popover>
`;
